2004-06-01  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R120-Silk.el:
	- Use `->subsumptive' for some character definitions.
	- Add mappings for Big5 code points.

	* Ideograph-R004-Slash.el (U-000200B3): Unify C6-3A65 and M-27272
	instead of using `->same'; use
	`ideographic-{radical|strokes}@{ucs|cns}' and
	`ideographic-radical@cns*sources'.

2004-05-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R178-Tanned-Leather.el: Add mappings between CJK Ext B
	and CNS 11643 plain 5.

2004-05-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R149-Speech.el (U-000261E5): Use `->subsumptive'.

	* Ideograph-R009-Man.el (U-0002035E): Use `->subsumptive' instead
	of `->same' for M-49471; use
	`ideographic-{radical|strokes}@{ucs|cns}' and
	`ideographic-radical@cns*sources' instead of `ideographic-'.
	(U-0002036E): Use `->subsumptive'.
	(U+349D): Likewise.

2004-05-31  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R180-Sound.el: Add mappings between CJK Ext B and CNS
	11643 plain 5.

2004-05-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R179-Leek.el (C5-442E): Unify U-00029401.
	(C5-5252): Unify U-00029403.
	(M-43257): Map to U-0002940C; use `->subsumptive' to integrate
	C5-7173.
	(C5-7173): Map to U-0002940C; use `->subsumptive' to integrate
	M-43257.

2004-05-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R180-Sound.el, Ideograph-R178-Tanned-Leather.el: Use
	`->subsumptive' for some character definitions.

2004-05-26  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R179-Leek.el: Use `->subsumptive' for some character
	definitions.
	(U+97EF): Unify JC3-6CD4.

2004-05-26  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R177-Leather.el: Use `->subsumptive' for some
	character definitions.
	(M-42712): Unify U-0002925C.
	(U+976C): Unify JC3-8DBD.
	(U+9773): Unify JC3-6CC1.
	(J90-3724): Unify JC3-6CCB.